More DB Persistence Changes
More DB Persistence Changes for Create, update user & pass userDetails when OTP verification is successful
